--- a/views/getinvolved.html
+++ b/views/getinvolved.html
@@ -3,4 +3,88 @@
 <h3>
 Getting Involved
     </h3>
+
+    <p>
+        Kinship is a completely volunteer-led organization. This community is successful because of the 
+        hard work of many volunteers who operate at different levels. Kinship welcomes its membership and
+        supporters to get involved with Kinship wherever they may be. 
+    </p>
+
+
+<h4> 
+    Coordinator Responsibilities
+</h4>
+<ul>
+<li>
+Liaison between the chapters, groups and members within the region
+</li>
+<li>Reports regularly to the Member Services Committee concerning the activities of the region
+</li>
+<li>Planning, motivating and providing resources to the chapters
+</li>
+<li>Revitalizes dormant chapters
+</li>
+<li>Organizes new chapters in the region</li>
+</ul>
+
+
+
+    <p>
+        The following positions are open and available.
+    </p>
+
+
+
+
+
+<h4>
+Common Kinship Activities
+</h4>
+<ul>
+<li>
+Monthly Vespers
+A guest speaker brings a spiritual message, can be followed by fellowship & refreshments
+
+</li>
+<li>
+    Monthly Luncheon
+Lunch at a local restaurant on the weekend, may be after Church Service. All are encouraged to attend, whether they have attended church or not.
+
+</li>
+<li>
+    March in the Pride Parade 
+    
+    - An Outreach Event
+Decorate vehicle with Kinship Banner.
+Vehicle has Kinship Website address local Kinship contact information 
+Toss candy to the crowd during the parade
+Have flyers and cards about SDA Kinship
+</li>
+<li>
+    
+</li>
+<li>
+    
+</li>
+<li>
+    
+</li>
+<li>
+    
+</li>
+<li>
+    
+</li>
+<li>
+    
+</li>
+</ul>
+
+
+
+<h4>How Do I Sign-Up ? </h4>
+<p>
+Identify your interest on this call; or,
+Send email to Member Services at office@sdakinship.org
+</p>
 </div>
