--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,75 @@
 <div>
-<h4>
-Home page
-    </h4>
+
+    <div class="row">
+        
+        <div class="col-sm-4">
+            <h3>
+                Who We Are
+            </h3>
+            <p>
+                SDA Kinship International was created in 1976 to provide a safe community for 
+                LGBTIQA+ individuals with a Seventh-Day Adventist background. 
+                <a href="#/community">
+                Our community is diverse,</a> Learn how to join us.
+            </p>
+        </div>
+
+        <div class="col-sm-8">
+            <h3>Highlights
+            </h3>
+
+            <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <h4>Kampmeeting
+                            <br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+                    </div>
+                    <div class="item">
+                        <h4>Documentary<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+                    </div>
+                    <div class="item">
+                        <h4>More<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="row">
+
+
+    </div>
+
+    <div class="row">
+
+
+    </div>
+
+    <div class="row">
+
+
+    </div>
+
+
+
 </div>
