--- a/views/getinvolved.html
+++ b/views/getinvolved.html
@@ -10,81 +10,99 @@ Getting Involved
         supporters to get involved with Kinship wherever they may be. 
     </p>
 
+<div class="row">
+    <div class="col-sm-8">
 
-<h4> 
-    Coordinator Responsibilities
-</h4>
-<ul>
+        <h4> 
+            Coordinator Responsibilities
+        </h4>
+        <ul>
+            <li>
+            Liaison between the chapters, groups and members within the region
+            </li>
+            <li>Reports regularly to the Member Services Committee concerning the activities of the region
+            </li>
+            <li>Planning, motivating and providing resources to the chapters
+            </li>
+            <li>Organize new or revitalize dormant chapters
+            </li>
+        </ul>
+
+
+        <h4>
+        Common Kinship Activities
+        </h4>
+        <ul>
+        <li>
+        Monthly Vespers
+        A guest speaker can brings a spiritual message,  or a group discussion, can be followed by fellowship & refreshments
+
+        </li>
+        <li>
+            Monthly Luncheon
+        Lunch at a local restaurant on the weekend, may be after Church Service. All are encouraged to attend, whether they have attended church or not.
+
+        </li>
+        <li>
+            March in the Pride Parade 
+            
+            - An Outreach Event
+        Decorate vehicle with Kinship Banner.
+        Vehicle has Kinship Website address local Kinship contact information 
+        Toss candy to the crowd during the parade
+        Have flyers and cards about SDA Kinship
+        </li>
+        </ul>
+
+
+
+        <h4>How Do I Sign-Up ? </h4>
+        <p>
+        Send email to Member Services at office@sdakinship.org
+        </p>
+    </div>
+
+
+    <div class="col-sm-4">
+        <h4> Coordinator Vacancies</h4>
+        <ul>
+            <li>NYC
+            </li>
+            <li>
+Region 3 – 
+            </li>
+            <li>
+Region 4 – 
+            </li>
+            <li>
+Region 6 – 
+            </li>
+            <li>
+Region 7 – Pacific Northwest
+            </li>
+            <li>
+Region 9 – Southern California & Arizona
+            </li>
+            <li>
+Chapter Vacancies
+            </li>
+            <li>
+Denver Area
+            </li>
+            <li>
+Palm Springs
+            </li>
+            <li>
+Inland Empire (SoCal)</li>
 <li>
-Liaison between the chapters, groups and members within the region
-</li>
-<li>Reports regularly to the Member Services Committee concerning the activities of the region
-</li>
-<li>Planning, motivating and providing resources to the chapters
-</li>
-<li>Revitalizes dormant chapters
-</li>
-<li>Organizes new chapters in the region</li>
-</ul>
+North Carolina
+            </li>
+            <li>
+                Sacramento Area
 
+            </li>
+        </ul>
+    </div>
+</div>
 
-
-    <p>
-        The following positions are open and available.
-    </p>
-
-
-
-
-
-<h4>
-Common Kinship Activities
-</h4>
-<ul>
-<li>
-Monthly Vespers
-A guest speaker brings a spiritual message, can be followed by fellowship & refreshments
-
-</li>
-<li>
-    Monthly Luncheon
-Lunch at a local restaurant on the weekend, may be after Church Service. All are encouraged to attend, whether they have attended church or not.
-
-</li>
-<li>
-    March in the Pride Parade 
-    
-    - An Outreach Event
-Decorate vehicle with Kinship Banner.
-Vehicle has Kinship Website address local Kinship contact information 
-Toss candy to the crowd during the parade
-Have flyers and cards about SDA Kinship
-</li>
-<li>
-    
-</li>
-<li>
-    
-</li>
-<li>
-    
-</li>
-<li>
-    
-</li>
-<li>
-    
-</li>
-<li>
-    
-</li>
-</ul>
-
-
-
-<h4>How Do I Sign-Up ? </h4>
-<p>
-Identify your interest on this call; or,
-Send email to Member Services at office@sdakinship.org
-</p>
 </div>
