--- a/views/faqs.html
+++ b/views/faqs.html
@@ -1,69 +1,56 @@
 <div>
+<h3>
+Frequently Asked Questions about SDA Kinship    </h3>
 
-<a data-toggle="collapse" data-target="#demo">Collapsible</a>
+<a data-toggle="collapse" data-target="#faq1">
+    What does Kinship strive to do?
+</a>
 
-<div id="demo" class="collapse">
-Lorem ipsum dolor text....
+<div id="faq1" class="collapse">
+Kinship is a support organization reaching out to perhaps those most ostracized by the Seventh-day Adventist (SDA) Church: former and current church members who are lesbian, gay, bisexual or transgendered (LGBT). Kinship shares that a different view exists -- a Biblically sound view of love and acceptance.
+</div>
+
+<br />
+<a data-toggle="collapse" data-target="#faq2">When was Kinship started and why?</a>
+
+<div id="faq2" class="collapse">
+Kinship was formed to provide a loving and inclusive support community for Seventh-day Adventist gay people and their supportive friends and family — an important ministry untouched by the corporate Seventh-day Adventist Church. Kinship was founded in 1976 and was incorporated as a nonprofit organization in 1981. (see A Brief history of Kinship) It is managed by a volunteer board of directors and regional coordinators. Its current list of members and friends includes over 1800 people in 62 countries.
 </div>
 
 
-Does Kinship recruit people and attempt to make them gay?
-No, Kinship is in no way interested in recruiting people and does not attempt to encourage people to become gay who self identify as heterosexual. Kinship's only mission is to reach out in a Christlike and loving manner to those who self identify as gay and who may have been ostracized by the Seventh-day Adventist Church for being gay. Unfortunately, some people within the church who don't agree with Kinship's mission resort to misinformation in an attempt hurt our important work — providing a loving and inclusive support community for LGBT people and their supportive friends and family.
+<a data-toggle="collapse" data-target="#faq4">Is Kinship a "change" or "ex-gay" ministry?</a>
 
-What does Kinship strive to do?
-Kinship is a support organization reaching out to perhaps those most ostracized by the Seventh-day Adventist (SDA) Church: former and current church members who are lesbian, gay, bisexual or transgendered (LGBT). Kinship shares that a different view exists -- a Biblically sound view of love and acceptance.
-
-Commitment to SDA gays—Kinship hopes to lessen the pain that often accompanies the realization that one is gay and a Seventh-day Adventist. We understand the difficulties faced in reconciling one's sexual orientation and spirituality and extend good news that a happy, fulfilling, healthy and Christian life is possible for openly gay people. Kinship is not a "change" or "ex-gay" ministry.
-Kinship is also concerned with the special issues facing parents and families of LGBT people within the context of Adventism. And in the era of HIV/AIDS, Kinship provides specialized support for those touched directly or indirectly by this disease.
-
-Commitment to the SDA Church—Kinship advocates for the understanding and affirmation of LGBT Adventists among themselves and within the Seventh-day Adventist community through education and reconciliation. Kinship lovingly attempts to educate the Seventh-day Adventist Church about homosexuality and the needs and feelings of its LGBT members and former members while hoping to eliminate homophobia and discrimination based on gender identity and sexual orientation.
-
-What is Kinship's relationship to the Seventh-day Adventist Church?
-Kinship currently has no formal connection with the Seventh-day Adventist Church and does not receive any support from the General Conference of Seventh-day Adventists or its constituent churches. Kinship, however, is grateful to receive individual support from many church leaders, pastors, members, educators and churches.
-
-When was Kinship started and why?
-Kinship was formed to provide a loving and inclusive support community for Seventh-day Adventist gay people and their supportive friends and family — an important ministry untouched by the corporate Seventh-day Adventist Church. Kinship was founded in 1976 and was incorporated as a nonprofit organizagion in 1981. (see A Brief history of Kinship) It is managed by a volunteer board of directors and regional coordinators. Its current list of members and friends includes over 1800 people in 62 countries.
-
-What member services does Kinship provide?
-Kinship provides assistance and support through suggested reading materials, personal dialog, professional counseling referrals and through its network of supportive members. Below are some of its member services and activities:
-
-Connection Newsletter—Members receive Kinship's newsletter, Connection, which contains editorials, letters, articles, book reviews, news and announcements. A directory of Kinship officers, including regional coordinators, appears in each issue. In addition to Connection, many Kinship regional coordinators produce their own newsletters for local members.
-
-Kinship Online—Kinship provides its members with an online community that members can learn more about Kinship, LGBTI resources and can communicate with other Kinship members. Some of the favorite features are the very active secret Facebook groups.
-
-Kinship Kampmeeting—Kinship organizes an annual conference called Kampmeeting. This valuable time together allows members to meet, renew friendships and enjoy activities, worship, music, entertainment and good food, including vegetarian fare. In addition to the annual U.S. Kampmeeting, meetings are also held in Europe, Australia, and other parts of the world.
-
-Regional Activities—Kinship proudly has members throughout the United States and an increasing number of members in other areas of the world. To help communicate and reach out to its diverse membership, Kinship uses a system of regions. Currently there are nine United States regions and organized outreach efforts in Canada, Germany, Netherlands and Australia. Coordinators and members within these areas help communicate with members and often sponsor meetings, socials, picnics, potluck dinners, workshops, worship and recreational activities. The frequency and type of activities depend largely on the number and proximity of members living within each region.
-
-Outreach Programs—Our outreach programs for college-age young people and our educational programs for pastors, teachers and counselors are intended to provide information, dialogue, counsel and sympathetic understanding. We continue to provide what cannot yet be generally found within the organized Seventh-day Adventist Church: compassionate support for its members who happen to be gay.
-
-Commitment to SDA gays—Kinship hopes to lessen the pain that often accompanies the realization that one is gay and a Seventh-day Adventist. We understand the difficulties faced in reconciling one's sexual orientation and spirituality and extend good news that a happy, fulfilling, healthy and Christian life is possible for openly gay people. Kinship is not a "change" or "ex-gay" ministry.
-Kinship is also concerned with the special issues facing parents and families of LGBTI people within the context of Adventism. And in the era of HIV/AIDS, Kinship provides specialized support for those touched directly or indirectly by this disease.
-
-Commitment to the SDA Church—Kinship advocates for the understanding and affirmation of LGBTI Adventists among themselves and within the Seventh-day Adventist community through education and reconciliation. Kinship lovingly attempts to educate the Seventh-day Adventist Church about homosexuality and the needs and feelings of its LGBTI members and former members while hoping to eliminate homophobia and discrimination based on gender identity and sexual orientation.
-
-What is Kinship Kampmeeting?
-Each year Kinship organizes a conference called Kampmeeting. This valuable time together allows members to meet, renew friendships and enjoy activities, music, worship, entertainment and good food, including vegetarian fare.
-Over the years, a number of Seventh-day Adventist guest speakers have participated in Kinship Kampmeeting by leading worship services and workshops that addressing topics such as health, relationship-building, Christian living and biblical history. This event is a sought-after spiritual and social highlight of the year for many Kinship members. (See Events for information about upcoming meetings.)
-
-What is Kinship's confidentiality policy? 
-Kinship is sensitive to the need for confidentiality and uses extreme care to keep confidential its membership list and information. Realizing, too, that some members are at risk of losing their jobs or church membership status when coming out, it's our goal to make Kinship as safe as possible for all members. Kinship does not disclose membership information (e.g. names, contact information, etc.) to its general membership or any other organizations, including the Seventh-day Adventist Church and its affiliate organizations. Additionally, all correspondence to members, including the Connection newsletter, is sent in plain envelopes that only contain Kinship's Post Office Box address. (If you have special needs or concerns regarding confidentiality, please contact Kinship to request more information about steps taken to ensure your privacy.) Thankfully, more and more of our members find that they are able to live their lives openly and honestly within their community, workplace and place of worship.
-
-How do I join Kinship?
-Everyone who supports the purpose of Kinship is encouraged to become a member by completing a membership application form. (see Membership for additional information.) Voting privileges at membership meetings held during Kampmeeting, however, are reserved for LGBT members. Once you join, you receive a welcome and confirmation letter and begin receiving Kinship's Connection newsletter. There is no cost to join Kinship, however, many members do choose to remember Kinship when planning their philanthropic contributions.
-
-How is Kinship funded?
-As an entirely volunteer organization, Kinship is funded through gifts from its members and others who believe in its mission. Contributions are not required for membership, but as with most service organizations, funding our many projects is a challenge. Gifts of any size are appreciated and are tax deductible. When confidentiality is paramount, contributors may remain anonymous while still receiving records for tax deductions. Kinship's financial summary periodically appears in the newsletter and may also be requested from our treasurer.
-
-Is Kinship a "change" or "ex-gay" ministry?
+<div id="faq4" class="collapse">
 Kinship is not a "change" or "ex-gay" ministry and is not associated with any such organizations. Kinship believes that LGBT people are created as God intended and should not be subjected to mistreatment or discrimination.
 It is also of interest to note that these organizations, among hundreds of others, have spoken out against "reparative," "change," and "ex-gay" treatments and advocate for stopping such practices: American Psychiatric Association; American Psychological Association; American Medical Association; National Mental Health Association; and American Academy of Pediatrics.
 
+</div>
 
-Doesn't the Bible say being gay is a sin?
-Actually, the Bible is silent on the issue of homosexuality and sexual orientation. Many Seventh-day Adventist Christians, from laypeople to seminary professors, have studied the Bible texts believed to reference homosexual acts and conclude that what the Bible does not say is as important as what it does say. The Bible clearly speaks against lust in any form, but nowhere does it condemn or even mention homosexuality as a sexual orientation. Early church leader Ellen G. White also does not condemn homosexuality nor does she correspond homosexuality with any of the Biblical texts often used to condemn and mistreat gay people.
-Has Kinship ever initiated a lawsuit against the SDA Church?
+<a data-toggle="collapse" data-target="#faq3">What is Kinship's relationship to the Seventh-day Adventist Church?
+</a>
+
+<div id="faq3" class="collapse">
+Kinship currently has no formal connection with the Seventh-day Adventist Church and does not receive any support from the General Conference of Seventh-day Adventists or its constituent churches. Kinship, however, is grateful to receive individual support from many church leaders, pastors, members, educators and churches.
+</div>
+
+
+<a data-toggle="collapse" data-target="#faq6">
+    Has Kinship ever initiated a lawsuit against the SDA Church?
+</a>
+
+<div id="faq6" class="collapse">
 No, Kinship has never sued the Seventh-day Adventist Church or ever planned to sue the church. This myth is often perceived because in 1987 the Seventh-day Adventist Church filed legal action with the State of California in an attempt to prohibit SDA Kinship from using the name "Seventh-day Adventist" and the abbreviation "SDA." On October 3, 1991, United States District Judge Mariana R. Pfaeizer ruled that Seventh-day Adventist Kinship International, Inc. did not infringe on the Seventh-day Adventist Church's use of the name and that Kinship may continue to use the identifying name. (The complete text of the judge's decision is available upon request.)
+</div>
+
+
+<a data-toggle="collapse" data-target="#faq5">Doesn't the Bible say being gay is a sin?
+</a>
+
+<div id="faq5" class="collapse">
+
+Actually, the Bible is silent on the issue of homosexuality and sexual orientation. Many Seventh-day Adventist Christians, from laypeople to seminary professors, have studied the Bible texts believed to reference homosexual acts and conclude that what the Bible does not say is as important as what it does say. The Bible clearly speaks against lust in any form, but nowhere does it condemn or even mention homosexuality as a sexual orientation. Early church leader Ellen G. White also does not condemn homosexuality nor does she correspond homosexuality with any of the Biblical texts often used to condemn and mistreat gay people.
+</div>
+
 
 
 </div>
