--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -1,129 +1,133 @@
  <div class="container">
       <div class="row">
-          <div class="col-sm-9">
+          <div class="col-sm-8">
               <div class="container-fluid text-center">
 
-              <!-- Container (About Section) -->
-              <div id="qualifications" class="container-fluid">
-                <div class="row" style="text-align: left">
-                    <h3>General Qualifications</h3>     
-                    <ul>
-                        <li> All Officers must be Regular Members at least twenty-five years of age, must have been members for at least one year, and must possess a college degree, certificate, or its equivalent as determined by the Board. The Treasurer shall have at least two years’ professional experience in the field of finance or accounting. 
-                        </li>
-                        <li> The President, Vice President, and President Elect shall have previously served at least 
-                          two years on the Board, preferably within the last five years.
-                        </li>
+                  <!-- Container (Pricing Section) -->
+                  <div id="president" class="container-fluid bg-grey">
+                    <div style="text-align: left">
+                      <h2>President</h2>
+                        The President shall:
+                      <ul> 
+                        <li>Serve as Chief Executive Officer of the corporation</li>
+                        <li>Represent the corporation in dealing with other corporations and businesses, including the signing of contracts</li>
+                        <li>Sit in an ex officio capacity, without vote, on all committees except the Nominating Committee</li>
+                        <li>Coordinate and chair membership meetings, Board meetings, and Executive Committee meetings, when present</li>
+                        <li>Maintain communication with the Board between meetings</li>
+                        <li>Report regularly to the membership.</li>
                       </ul>
-                </div>
-                <div class="row" style="text-align: left">
-                  <h3> Open Offices </h3>
-                  <div class="col-sm-3">
-                    President
-                  </div>
-                  <div class="col-sm-3">
-                    Vice President
-                  </div>
-                  <div class="col-sm-3">
-                    Director of Church Relations
-                  </div>
-                  <div class="col-sm-3">
-                    Women's Director
-                  </div>
-                </div>
-              </div>
 
-              <!-- Container (Pricing Section) -->
-              <div id="president" class="container-fluid bg-grey">
-                <div style="text-align: left">
-                  <h2>President</h2>
-                    The President shall:
-                  <ul> 
-                    <li>Serve as Chief Executive Officer of the corporation</li>
-                    <li>Represent the corporation in dealing with other corporations and businesses, including the signing of contracts</li>
-                    <li>Sit in an ex officio capacity, without vote, on all committees except the Nominating Committee</li>
-                    <li>Coordinate and chair membership meetings, Board meetings, and Executive Committee meetings, when present</li>
-                    <li>Maintain communication with the Board between meetings</li>
-                    <li>Report regularly to the membership.</li>
-                  </ul>
-
-                  <p>
-                  </p>
-                </div>
-              </div>
-              
-              <!-- Container (Discounts Section) -->
-              <div id="vicepresident" class="container-fluid text-center">
-                <div style="text-align: left">
-                  <h2>Vice President</h2>
-                    The Vice President shall:
-                  <ul> 
-                    <li>Assist the President in her or his duties</li>
-                    <li>Perform the functions of the President in the event of her/his absence, unavailability, or inability to perform the duties of the office</li>
-                    <li>Chair the Member Services Committee</li>
-                    <li>Perform other duties as designated by the President</li>
-                  </ul>
-
-                </div> 
-              </div>
-
-              <!-- Container (scholarships Section) -->
-              <div id="churchRelations" class="container-fluid bg-grey">
-                <div style="text-align: left">
-                   <h2>Director of Church Relations</h2>
-                  Responsibilities
-                    <ul>
-                      <li>Act as the chief liaison between Kinship and the Seventh-day Adventist church
-                      </li>
-                      <li>Monitor or facilitate monitoring the affairs of the Seventh-day Adventist church and report regularly to the 
-                        President and/or the Board and/or the organization’s newsletter
-                      </li>
-                      <li>Assist the Director of Kampmeeting with the identification and procurement of clergy for Kampmeeting 
-                        participation, and assist with their education and preparation
-                      </li>
-                      <li>Maintain a list of, and keep in contact with, clergy who have attended Kampmeeting and with other clergy and 
-                        denominational employees who are supportive of Kinship</li>
-                      <li>Act as a conduit for communication with the Seventh-day Adventist Church</li>
-                      <li>Serve on the Kampmeeting Committee </li>
-                      <li>Chair the Advisory Council and facilitate communication between the Board and the Council.</li>
+                      <p>
+                      </p>
+                    </div>
+                  </div>
+                  
+                  <!-- Container (Discounts Section) -->
+                  <div id="vicepresident" class="container-fluid text-center">
+                    <div style="text-align: left">
+                      <h2>Vice President</h2>
+                        The Vice President shall:
+                      <ul> 
+                        <li>Assist the President in her or his duties</li>
+                        <li>Perform the functions of the President in the event of her/his absence, unavailability, or inability to perform the duties of the office</li>
+                        <li>Chair the Member Services Committee</li>
+                        <li>Perform other duties as designated by the President</li>
                       </ul>
-                </div>
+
+                    </div> 
+                  </div>
+
+                  <!-- Container (scholarships Section) -->
+                  <div id="churchRelations" class="container-fluid bg-grey">
+                    <div style="text-align: left">
+                      <h2>Director of Church Relations</h2>
+                      Responsibilities
+                        <ul>
+                          <li>Act as the chief liaison between Kinship and the Seventh-day Adventist church
+                          </li>
+                          <li>Monitor or facilitate monitoring the affairs of the Seventh-day Adventist church and report regularly to the 
+                            President and/or the Board and/or the organization’s newsletter
+                          </li>
+                          <li>Assist the Director of Kampmeeting with the identification and procurement of clergy for Kampmeeting 
+                            participation, and assist with their education and preparation
+                          </li>
+                          <li>Maintain a list of, and keep in contact with, clergy who have attended Kampmeeting and with other clergy and 
+                            denominational employees who are supportive of Kinship</li>
+                          <li>Act as a conduit for communication with the Seventh-day Adventist Church</li>
+                          <li>Serve on the Kampmeeting Committee </li>
+                          <li>Chair the Advisory Council and facilitate communication between the Board and the Council.</li>
+                          </ul>
+                    </div>
+                  </div>
+
+                  <!-- Container (scholarships Section) -->
+                  <div id="womens" class="container-fluid">
+                    <div style="text-align: left">
+                      <h2>Women's Director</h2>
+                        Responsibilities:
+
+                        <ul>
+                          <li>Serve as an advocate for women’s issues and 
+                            concerns within the organization
+                          </li>
+
+                          <li>Assist in the facilitation of networking and 
+                            encourage and support participation among women members
+                          </li>
+
+                          <li>Organize, facilitate, or delegate activities to implement the above
+                          </li>
+
+                          <li>Advise and assist the Director of Communications in regard to outreach to women
+                          </li>
+                        </ul>
+                    </div>
+                  </div>
+
+                                    <!-- Container (About Section) -->
+                  <div id="qualifications" class="container-fluid">
+                    <div class="row" style="text-align: left">
+                        <h3>General Qualifications</h3>     
+                        <ul>
+                            <li> All Officers must be Regular Members at least twenty-five years of age, must have been members for at least one year, and must possess a college degree, certificate, or its equivalent as determined by the Board. The Treasurer shall have at least two years’ professional experience in the field of finance or accounting. 
+                            </li>
+                            <li> The President, Vice President, and President Elect shall have previously served at least 
+                              two years on the Board, preferably within the last five years.
+                            </li>
+                          </ul>
+                    </div>
+                    <div class="row" style="text-align: left">
+                      <h3> Open Offices </h3>
+                      <div class="col-sm-3">
+                        President
+                      </div>
+                      <div class="col-sm-3">
+                        Vice President
+                      </div>
+                      <div class="col-sm-3">
+                        Director of Church Relations
+                      </div>
+                      <div class="col-sm-3">
+                        Women's Director
+                      </div>
+                    </div>
+                  </div>
+
               </div>
-
-              <!-- Container (scholarships Section) -->
-              <div id="womens" class="container-fluid">
-                <div style="text-align: left">
-                   <h2>Women's Director</h2>
-                    Responsibilities:
-
-                    <ul>
-                      <li>Serve as an advocate for women’s issues and 
-                        concerns within the organization
-                      </li>
-
-                      <li>Assist in the facilitation of networking and 
-                        encourage and support participation among women members
-                      </li>
-
-                      <li>Organize, facilitate, or delegate activities to implement the above
-                      </li>
-
-                      <li>Advise and assist the Director of Communications in regard to outreach to women
-                      </li>
-                    </ul>
-                </div>
-              </div>
-
-              <!-- Container (scholarships Section) -->
-              <div id="apply" class="container-fluid bg-grey">
-                <div style="text-align: left">
-                   <h2>How to Apply</h2>
-                  <p>
-                    If you are will to run for any of the positions:
-                    Please fill out the following form:
-                  </p>    
-                </div>
-              </div>
-
           </div>
-      </div>
+          <div class="col-sm-4">
+              <div style="text-align: left">
+                <h3>How to Apply</h2>
+                <p>
+                  If you are willing to run for any of the open positions:
+                  
+                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" class="btn btn-success">
+                  Apply Here
+                  </a>
+                  
+                </p>    
+              </div>
+          </div>
+
     </div>
+ </div>
