--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -1,4 +1,20 @@
  <div class="container">
+
+    <h3>
+      Kinship 2017 Elections
+    </h3>
+
+    <p>
+        Kinship holds elections every year during Kampmeeting. This year the following positions are up for election: 
+        <ul>
+          <li>President</li>
+          <li>Vice President</li>
+          <li>Director of Church Relations</li>
+          <li>Women's Director</li>
+        </ul>
+    </p>
+
+
       <div class="row">
           <div class="col-sm-8">
               <div class="container-fluid text-center">
@@ -6,7 +22,7 @@
                   <!-- Container (Pricing Section) -->
                   <div id="president" class="container-fluid bg-grey">
                     <div style="text-align: left">
-                      <h2>President</h2>
+                      <h3>President</h3>
                         The President shall:
                       <ul> 
                         <li>Serve as Chief Executive Officer of the corporation</li>
@@ -25,7 +41,7 @@
                   <!-- Container (Discounts Section) -->
                   <div id="vicepresident" class="container-fluid text-center">
                     <div style="text-align: left">
-                      <h2>Vice President</h2>
+                      <h3>Vice President</h3>
                         The Vice President shall:
                       <ul> 
                         <li>Assist the President in her or his duties</li>
@@ -40,7 +56,7 @@
                   <!-- Container (scholarships Section) -->
                   <div id="churchRelations" class="container-fluid bg-grey">
                     <div style="text-align: left">
-                      <h2>Director of Church Relations</h2>
+                      <h3>Director of Church Relations</h3>
                       Responsibilities
                         <ul>
                           <li>Act as the chief liaison between Kinship and the Seventh-day Adventist church
@@ -63,7 +79,7 @@
                   <!-- Container (scholarships Section) -->
                   <div id="womens" class="container-fluid">
                     <div style="text-align: left">
-                      <h2>Women's Director</h2>
+                      <h3>Women's Director</h3>
                         Responsibilities:
 
                         <ul>
@@ -84,39 +100,13 @@
                     </div>
                   </div>
 
-                                    <!-- Container (About Section) -->
-                  <div id="qualifications" class="container-fluid">
-                    <div class="row" style="text-align: left">
-                        <h3>General Qualifications</h3>     
-                        <ul>
-                            <li> All Officers must be Regular Members at least twenty-five years of age, must have been members for at least one year, and must possess a college degree, certificate, or its equivalent as determined by the Board. The Treasurer shall have at least two years’ professional experience in the field of finance or accounting. 
-                            </li>
-                            <li> The President, Vice President, and President Elect shall have previously served at least 
-                              two years on the Board, preferably within the last five years.
-                            </li>
-                          </ul>
-                    </div>
-                    <div class="row" style="text-align: left">
-                      <h3> Open Offices </h3>
-                      <div class="col-sm-3">
-                        President
-                      </div>
-                      <div class="col-sm-3">
-                        Vice President
-                      </div>
-                      <div class="col-sm-3">
-                        Director of Church Relations
-                      </div>
-                      <div class="col-sm-3">
-                        Women's Director
-                      </div>
-                    </div>
+  
                   </div>
 
               </div>
           </div>
           <div class="col-sm-4">
-              <div style="text-align: left">
+              <div class="container" style="text-align: left">
                 <h3>How to Apply</h2>
                 <p>
                   If you are willing to run for any of the open positions:
