--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -6,12 +6,34 @@
 
     <p>
         Kinship holds elections every year during Kampmeeting. This year the following positions are up for election: 
-        <ul>
-          <li>President</li>
-          <li>Vice President</li>
-          <li>Director of Church Relations</li>
-          <li>Women's Director</li>
-        </ul>
+    </p>
+    <div class="container row">
+        <div class="col-sm-4">
+              <div class="container" style="text-align: left">
+                 <ul>
+                  <li>President</li>
+                  <li>Vice President</li>
+                  <li>Director of Church Relations</li>
+                  <li>Women's Director</li>
+                </ul>
+              </div>
+        </div>
+
+         <div class="col-sm-4">
+              <div class="container" style="text-align: left">
+                <h3>How to Apply</h2>
+                <p>
+                  If you are willing to run for any of the open positions:
+                  
+                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" class="btn btn-success">
+                  Apply Here
+                  </a>
+                  
+                </p>    
+              </div>
+          </div>
+    </div>
+      
     </p>
 
 
@@ -105,19 +127,6 @@
 
               </div>
           </div>
-          <div class="col-sm-4">
-              <div class="container" style="text-align: left">
-                <h3>How to Apply</h2>
-                <p>
-                  If you are willing to run for any of the open positions:
-                  
-                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" class="btn btn-success">
-                  Apply Here
-                  </a>
-                  
-                </p>    
-              </div>
-          </div>
-
+       
     </div>
  </div>
