election up dates

--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -21,11 +21,10 @@
 
          <div class="col-sm-4">
               <div class="container" style="text-align: left">
-                <h3>How to Apply</h2>
                 <p>
                   If you are willing to run for any of the open positions:
-                  
-                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" class="btn btn-success">
+                  <br />
+                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success">
                   Apply Here
                   </a>
                   
