--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -44,7 +44,7 @@
                   <div id="president" class="container-fluid bg-grey">
                     <div style="text-align: left">
                       <h3>President</h3>
-                        The President shall:
+                        Responsibilities:
                       <ul> 
                         <li>Serve as Chief Executive Officer of the corporation</li>
                         <li>Represent the corporation in dealing with other corporations and businesses, including the signing of contracts</li>
@@ -63,7 +63,7 @@
                   <div id="vicepresident" class="container-fluid text-center">
                     <div style="text-align: left">
                       <h3>Vice President</h3>
-                        The Vice President shall:
+                      Responsibilities:
                       <ul> 
                         <li>Assist the President in her or his duties</li>
                         <li>Perform the functions of the President in the event of her/his absence, unavailability, or inability to perform the duties of the office</li>
@@ -114,7 +114,6 @@
 
                           <li>Organize, facilitate, or delegate activities to implement the above
                           </li>
-
                           <li>Advise and assist the Director of Communications in regard to outreach to women
                           </li>
                         </ul>
