updated elections again

--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -24,7 +24,7 @@
                 <p>
                   If you are willing to run for any of the open positions:
                   <br />
-                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success">
+                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success btn-lg">
                   Apply Here
                   </a>
                   
