--- a/views/kmtg17.html
+++ b/views/kmtg17.html
@@ -1,13 +1,19 @@
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8">
-      <h2>About Kampmeeting</h2><br>      
-      <h4>Kinship organizes an annual conference called Kampmeeting. This valuable time together allows members to meet, renew friendships and enjoy activities, worship, music, entertainment and good food, including vegetarian fare.</p>
-      <br>
+
+      <h2>About Kampmeeting</h2>
+  <div class="row" >
+    <div class="col-sm-6">   
+    <p>   SDA Kinship’s annual Kampmeeting takes place Thursday, July 6 to Saturday, July 8, 2017, at the Courtyard Marriott Mission Valley.</p>
+    <p>
+   Kampmeeting is Kinship’s annual conference where we come together to renew friendships, make new friends, enjoy entertainment, renew our faith, and more! This year it takes place in beautiful San Diego, a city in California, United States, known for its beaches, parks, and warm climate.
+    </p>
+    <p>
+    This year Kampmeeting will be different in format from previous years, and the registration fees do not include meals and hotel accommodations. We want to make sure that everyone who wants to attend can afford to do so. Visit www.sdakinship.org for info on special discounts and more.
+    </p>
     </div>
-    <div class="col-sm-4">
-      
+    <div class="col-sm-6">
+      <img src="https://jmezetin.github.io/kmtg17/images/sdakkampmeetinglogo_900.jpg" class="img-responsive" />
     </div>
   </div>
 </div>
