updated elections with collapse

--- a/views/elections2017.html
+++ b/views/elections2017.html
@@ -5,34 +5,10 @@
     </h3>
 
     <p>
-        Kinship holds elections every year during Kampmeeting. This year the following positions are up for election: 
+        Kinship holds elections every year during Kampmeeting. This year the following positions are up for election. 
+        Select each position to learn more. 
     </p>
-    <div class="container row">
-        <div class="col-sm-4">
-              <div class="container" style="text-align: left">
-                 <ul>
-                  <li>President</li>
-                  <li>Vice President</li>
-                  <li>Director of Church Relations</li>
-                  <li>Women's Director</li>
-                </ul>
-              </div>
-        </div>
 
-         <div class="col-sm-4">
-              <div class="container" style="text-align: left">
-                <p>
-                  If you are willing to run for any of the open positions:
-                  <br />
-                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success btn-lg">
-                  Apply Here
-                  </a>
-                  
-                </p>    
-              </div>
-          </div>
-    </div>
-      
     
 
 
@@ -43,41 +19,59 @@
                   <!-- Container (Pricing Section) -->
                   <div id="president" class="container-fluid bg-grey">
                     <div style="text-align: left">
-                      <h3>President</h3>
-                        Responsibilities:
-                      <ul> 
-                        <li>Serve as Chief Executive Officer of the corporation</li>
-                        <li>Represent the corporation in dealing with other corporations and businesses, including the signing of contracts</li>
-                        <li>Sit in an ex officio capacity, without vote, on all committees except the Nominating Committee</li>
-                        <li>Coordinate and chair membership meetings, Board meetings, and Executive Committee meetings, when present</li>
-                        <li>Maintain communication with the Board between meetings</li>
-                        <li>Report regularly to the membership.</li>
-                      </ul>
+                      <h3>
+                        <a data-toggle="collapse" data-target="#resp1">
+                        President    </a>
+                        </h3>
 
-                      <p>
-                      </p>
+                        <div id="resp1" class="collapse">
+        
+
+                            Responsibilities:
+                          <ul> 
+                            <li>Serve as Chief Executive Officer of the corporation</li>
+                            <li>Represent the corporation in dealing with other corporations and businesses, including the signing of contracts</li>
+                            <li>Sit in an ex officio capacity, without vote, on all committees except the Nominating Committee</li>
+                            <li>Coordinate and chair membership meetings, Board meetings, and Executive Committee meetings, when present</li>
+                            <li>Maintain communication with the Board between meetings</li>
+                            <li>Report regularly to the membership.</li>
+                          </ul>
+                          
+                        </div>
                     </div>
                   </div>
                   
                   <!-- Container (Discounts Section) -->
                   <div id="vicepresident" class="container-fluid text-center">
                     <div style="text-align: left">
-                      <h3>Vice President</h3>
-                      Responsibilities:
-                      <ul> 
-                        <li>Assist the President in her or his duties</li>
-                        <li>Perform the functions of the President in the event of her/his absence, unavailability, or inability to perform the duties of the office</li>
-                        <li>Chair the Member Services Committee</li>
-                        <li>Perform other duties as designated by the President</li>
-                      </ul>
+                        <h3>
+                          <a data-toggle="collapse" data-target="#resp2">
+                          Vice President    </a>
+                        </h3>
 
-                    </div> 
+                        <div id="resp2" class="collapse">
+
+                            Responsibilities:
+                          <ul> 
+                            <li>Assist the President in her or his duties</li>
+                            <li>Perform the functions of the President in the event of her/his absence, unavailability, or inability to perform the duties of the office</li>
+                            <li>Chair the Member Services Committee</li>
+                            <li>Perform other duties as designated by the President</li>
+                          </ul>
+
+                        </div> 
+                    </div>
                   </div>
-
                   <!-- Container (scholarships Section) -->
                   <div id="churchRelations" class="container-fluid bg-grey">
                     <div style="text-align: left">
-                      <h3>Director of Church Relations</h3>
+                       <h3>
+                          <a data-toggle="collapse" data-target="#resp3">
+                            Director of Church Relations    
+                          </a>
+                        </h3>
+
+                        <div id="resp3" class="collapse">
                       Responsibilities
                         <ul>
                           <li>Act as the chief liaison between Kinship and the Seventh-day Adventist church
@@ -94,14 +88,20 @@
                           <li>Serve on the Kampmeeting Committee </li>
                           <li>Chair the Advisory Council and facilitate communication between the Board and the Council.</li>
                           </ul>
+                      </div>
                     </div>
                   </div>
 
                   <!-- Container (scholarships Section) -->
                   <div id="womens" class="container-fluid">
                     <div style="text-align: left">
-                      <h3>Women's Director</h3>
-                        Responsibilities:
+                        <h3>
+                          <a data-toggle="collapse" data-target="#resp4">
+                           Women's Director
+                          </a>
+                        </h3>
+
+                        <div id="resp4" class="collapse">
 
                         <ul>
                           <li>Serve as an advocate for women’s issues and 
@@ -120,11 +120,23 @@
                     </div>
                   </div>
 
-  
                   </div>
+              </div>
 
+            </div>
+               <div class="col-sm-4">
+              <div class="container" style="text-align: left">
+                <p>
+                  If you are willing to run for any of the open positions:
+                  <br />
+                  <a href="https://goo.gl/forms/zmjnwUgrvskkmxTO2" target="_blank" class="btn btn-success btn-lg">
+                  Apply Here
+                  </a>
+                  
+                </p>    
               </div>
           </div>
+          </div>
        
-    </div>
+      </div>
  </div>
